Solucionado bug de overflow na versão mobile

--- a/style.css
+++ b/style.css
@@ -65,15 +65,21 @@ body {
 }
 
 /* =============== MAIN =============== */
+.wrapper {
+    overflow-x: hidden;
+    position: relative;
 
-
-main {
-    display: flex;
 
     /* Vai ocupar o restante da página */
     flex-grow: 1;
 
-    max-width: 100vw;
+
+}
+
+main {
+    display: flex;
+
+    height: 100%;
     overflow: hidden;
 }
 
@@ -189,6 +195,12 @@ img {
     transition: .5s;
 }
 
+@media screen and (max-width: 540px) {
+    .busca-input {
+        width: 70vw;
+    }
+}
+
 /* =============== TOOLS =============== */
 
 .right {
@@ -278,10 +290,11 @@ img {
 
 @media screen and (max-width: 540px) {
     .right {
-        position: absolute;
+        position: fixed;
         right: -200vw;
 
         width: 80%;
+        height: 100vh;
         padding: 5%;
 
         transition: .5s;
